fix chrome not right aligning buttons

--- a/res/css/views/elements/_MessageEditor.scss
+++ b/res/css/views/elements/_MessageEditor.scss
@@ -48,7 +48,7 @@ limitations under the License.
     .mx_MessageEditor_buttons {
         display: flex;
         flex-direction: row;
-        justify-content: end;
+        justify-content: flex-end;
         padding: 5px;
         position: absolute;
         left: 0;
